# statservice/stat-controller.js
@@ -79,3 +79,51 @@ export const getUserStatsControler = async (req, res) => {
     res.status(500).json({ error: error.message });
   }
 };
+
+export const getRankingController = async (req, res) => {
+  try {
+    // Obtener todas las estadísticas (puedes filtrar por usuario si es necesario)
+    const stats = await Stat.find();
+
+    // Agrupar las estadísticas por gameId y userId
+    const gamesMap = stats.reduce((acc, stat) => {
+      const key = `${stat.gameId}-${stat.userId}`;
+      if (!acc[key]) {
+        acc[key] = {
+          gameId: stat.gameId,
+          userId: stat.userId.toString(),
+          totalPoints: 0,
+          totalTime: 0,
+        };
+      }
+      acc[key].totalPoints += stat.points;
+      acc[key].totalTime += stat.time;
+      return acc;
+    }, {});
+
+    // Convertir el mapa en un array y ordenar
+    const ranking = Object.values(gamesMap).sort((a, b) => {
+      if (b.totalPoints === a.totalPoints) {
+        // Si los puntos son iguales, ordenar por tiempo ascendente
+        return a.totalTime - b.totalTime;
+      }
+      // Ordenar por puntos descendentes
+      return b.totalPoints - a.totalPoints;
+    });
+
+    // Limitar a los 10 primeros
+    const topRanking = ranking.slice(0, 10);
+
+    console.log('Top ranking:', topRanking);
+
+    // Enviar el ranking como respuesta
+    res.status(200).json({
+      topRanking,
+    });
+  } catch (error) {
+    console.error('Error al generar el ranking:', error);
+    res.status(500).json({
+      msg: 'Error al generar el ranking',
+    });
+  }
+};
